# Vessel

./: QUICKSTART.md  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
Vessel-main/: README.md  install.sh
Vessel-main/src/: main.py
Vessel-main/src/core/: __init__.py  packages.py
src/core/: __init__.py  catalog.py  distrobox.py  packages.py
src/ui/: window.py
