[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distrobox-packagemanager"
version = "0.1.0"
description = "GNOME Software-like package manager for distrobox containers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Diego", email = "diego@example.com"}
]

dependencies = [
    "PyGObject>=3.46.0"
]

[project.scripts]
distrobox-packagemanager = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/distrobox-packagemanager"

[tool.setuptools]
packages = ["src", "src.core", "src.ui"]
