[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Vessel"
version = "0.1.0"
description = "A unified package manager that bridges Distrobox and Flatpak — install anything, run anywhere."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL3"}
authors = [
    {name = "Diego"}
]

dependencies = [
    "PyGObject>=3.46.0"
]

[project.scripts]
distrobox-packagemanager = "src.main:main"

[project.urls]
Homepage = "https://github.com/DiegoGor03/Vessel"

[tool.setuptools]
packages = ["src", "src.core", "src.ui"]
